force-app/main/default/objects/Graph_SharePoint_Config__mdt/Graph_SharePoint_Config__mdt.object-meta.xml
<CustomObject>
    <label>Graph SharePoint Config</label>
    <pluralLabel>Graph SharePoint Configs</pluralLabel>
    <description>Configuration settings for SharePoint integration via Microsoft Graph API</description>
</CustomObject>