force-app/main/default/objects/Graph_SharePoint_Config__mdt/fields/DriveId__c.field-meta.xml
<CustomField>
    <fullName>DriveId__c</fullName>
    <description>SharePoint Drive ID for the document library</description>
    <label>Drive Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>