force-app/main/default/objects/Graph_SharePoint_Config__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this configuration is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>