force-app/main/default/objects/Graph_SharePoint_Config__mdt/fields/SiteId__c.field-meta.xml
<CustomField>
    <fullName>SiteId__c</fullName>
    <description>SharePoint Site ID</description>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>