force-app/main/default/objects/Graph_SharePoint_Config__mdt/fields/TenantId__c.field-meta.xml
<CustomField>
    <fullName>TenantId__c</fullName>
    <description>Microsoft 365 Tenant ID</description>
    <label>Tenant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>